Some final corrections

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,7 +5,9 @@ output:
     keep_md: true
 ---
 
-###Loading and preprocessing the data###
+Welcome to my Reproducible Research Peer Assignment 1 document. 
+
+## Loading and preprocessing the data
 
 First, we need to load the data. We assume that the file is already downloaded. Also, we assume that it is located in the working directory. Then we convert date values to *date* format.
 
@@ -15,7 +17,7 @@ data <- read.csv("activity.csv")
 data$Date<-as.Date(data$date, format="%Y-%m-%d")
 ```
 
-###What is mean total number of steps taken per day?###
+## What is mean total number of steps taken per day?
 
 Now we need to calculate the total number of steps taken per day. We will use *aggregate* function for this task.
 
@@ -25,16 +27,16 @@ names(agg.date) <- c("Date", "steps")
 hist(agg.date$steps, xlab="Steps per day", main="Steps per day distribution")
 ```
 
-Then we take mean and median of daily values:
+Then we take mean and median of daily values.
 
 ```{r}
 mean(agg.date$steps)
 median(agg.date$steps)
 ```
 
-###What is the average daily activity pattern?###
+## What is the average daily activity pattern?
 
-Now let's look at how the number if steps changes during a day (we take interval averages for all days). Intervals are converted to *time*. 
+Now let us look at how the number of steps changes during a day (we take interval averages for all days). Intervals are converted to *time*. 
 
 ```{r}
 agg.interval <- aggregate(x=data$steps, by=list(data$interval), FUN=mean, na.rm=TRUE)
@@ -59,15 +61,15 @@ max.steps
 
 As we see, maximum number of steps is `r max.steps` and it occurs at `r max.interval` interval.
 
-###Imputing missing values###
+## Imputing missing values
 
-Let's check whether we have missing values in our dataset.
+Let us check whether we have missing values in our dataset.
 
 ```{r}
 sum(is.na(data$steps))
 ```
 
-Since we do have missing values, let's replace them with a mean for respective interval.
+Since we do have missing values, let us replace them with a mean for respective interval.
 
 ```{r}
 data.na <- data
@@ -92,25 +94,29 @@ mean(agg.na.date$steps)
 median(agg.na.date$steps)
 ```
 
-###Are there differences in activity patterns between weekdays and weekends?###
+As we see from both the shapes of the distribution and the differences between the means and the medians, imputing missing variables makes distribution look closer to normal.
+
+## Are there differences in activity patterns between weekdays and weekends?
+
+In order to see the difference, we need to split the dataset according to day type. Then we will plot the graph for each day type. Scale will be the same for comparison convenience.
 
 ```{r}
 Sys.setlocale("LC_TIME", "US") 
-data.na$weekend <-ifelse((weekdays(data.na$Date)=="Saturday" | weekdays(data.na$Date)=="Sunday"), 1, 0)
-workday<-data.na[data.na$weekend==0, ]
-weekend<-data.na[data.na$weekend==1, ]
+data.na$weekday <-ifelse((weekdays(data.na$Date)=="Saturday" | weekdays(data.na$Date)=="Sunday"), "weekend", "weekday")
+weekday<-data.na[data.na$weekday=="weekday", ]
+weekend<-data.na[data.na$weekday=="weekend", ]
 
-agg.workday <-aggregate(x=workday$steps, by=list(workday$interval), FUN=mean)
-names(agg.workday) <- c("interval", "steps")
-agg.workday$time<-parse_date_time(agg.workday$interval, c("%H%M", "%M"))
+agg.weekday <-aggregate(x=weekday$steps, by=list(weekday$interval), FUN=mean)
+names(agg.weekday) <- c("interval", "steps")
+agg.weekday$time<-parse_date_time(agg.weekday$interval, c("%H%M", "%M"))
 
 agg.weekend <-aggregate(x=weekend$steps, by=list(weekend$interval), FUN=mean)
 names(agg.weekend) <- c("interval", "steps")
 agg.weekend$time<-parse_date_time(agg.weekend$interval, c("%H%M", "%M"))
 
 par(mfrow=c(1,2))
-plot(agg.workday$time, agg.workday$steps, ylim=c(0, 250), xlab="Time", ylab="Steps", main="Working days")
+plot(agg.weekday$time, agg.weekday$steps, ylim=c(0, 250), xlab="Time", ylab="Steps", main="Working days")
 plot(agg.weekend$time, agg.weekend$steps, ylim=c(0, 250), xlab="Time", ylab="Steps", main="Weekend")
 ```
 
-We can see that activity distribution during a day differs on type of a day. On working days people get up earlier, then commute (some part of commuting is walking), walk a bit during their work, then get back home (in the evening they are tired that's walk less and take public transportaion). During weekend, people get up later, walk a lot during a day, and the distribution of activity is more even. Local minima are probably associated with meals.   
+We can see that activity distribution during a day depends on the type of a day. On working days people get up earlier, then commute (some part of commuting is walking), walk a bit during their work, then get back home (in the evening they are tired that's why walk less and take public transportation as soon as it is possible). During weekend, people get up later, walk a lot during a day, and the distribution of activity is more even. Local minima are probably associated with meals.
